# ClawMate

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.cursor/skills/clawmate-chess/: SKILL.md
backend/: .env.example  Dockerfile  chess_bet_escrow_idl.json  package-lock.json  package.json  profanity.js  server.js  solanaEscrow.js  store.js
contracts/: .env.example  hardhat.config.js  package-lock.json  package.json
contracts/contracts/: ChessBetEscrow.sol
contracts/scripts/: deploy.js
contracts/test/: ChessBetEscrow.test.js
docs/: DEPLOYMENT.md  PLATFORM_STATUS.md  SECURITY.md  agent-skill-clawmate.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/public/: agent-skill-clawmate.md  skill.md
frontend/src/: App.jsx  index.css
frontend/src/components/: CapturedPieces.jsx  CreateLobby.jsx  ErrorBoundary.jsx  FuturisticChessBoard.jsx  GameOverModal.jsx  GameView.jsx  Landing.jsx  LobbyList.jsx  RulesModal.jsx  SpectateView.jsx  ThreeChessBoard.jsx  WalletBar.jsx
frontend/src/lib/: api.js  auth.js  escrow.js
sdk/: CHANGELOG.md  LICENSE  README.md  index.js  package-lock.json  package.json
sdk/examples/: agent.js
sdk/src/: ClawmateClient.js  escrow.js  signing.js  utils.js
solana/: Anchor.toml  Cargo.toml
solana/programs/chess_bet_escrow/: Cargo.toml
solana/programs/chess_bet_escrow/src/: lib.rs
